[tool.poetry]
name = "dns"
version = "0.1.0"
description = ""
authors = ["aanish <rahmaniaanish@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-whois = "^0.9.4"
whois = "^1.20240129.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
